--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
-* Last name:
-* First name:
-* Github username:
+* Last name: Baum
+* First name: Liam
+* Github username: mrbombmusic
 
 * Instructions:
 
@@ -12,7 +12,3 @@ folder. Folders will be specified when assignments are given.
 Your final project and weekly_ethicacy assignments should be added to
 their respective folders. Group work should be added to all members
 repositories.
-
-
-
-
