added colabs link

--- a/databases/README.org
+++ b/databases/README.org
@@ -1,2 +1,4 @@
 * Last Name: Baum
 * First Name: Liam
+
+[Link to the colabs notebook](https://colab.research.google.com/drive/1JmdX-fuBUjEdsVuQw0WR7JadA4iTEyWM?usp=sharing)
